# enchanted-weather-app

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
src/: error.rs  main.rs  weather.rs
src/routes/: current_forecast.rs  weekly_forecast.rs
src/services/: current_forecast.rs  mod.rs  weekly_forecast.rs
