[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
dotenv = "0.15.0"
hex = "0.4.3"
cli-table = "0.4.9"
chrono = "0.4"
colored = "3.0.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"